[gd_scene load_steps=8 format=3 uid="uid://o47s8kq23me3"]

[ext_resource type="PackedScene" uid="uid://cf06keqo5si2c" path="res://navigator.tscn" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://cqfxs6qksygji" path="res://hand_model.tscn" id="2_1bvp3"]
[ext_resource type="Script" uid="uid://geascr1myi4n" path="res://encounter_container.gd" id="2_272bh"]
[ext_resource type="PackedScene" uid="uid://beuhhn4exqr55" path="res://gameplay_menu.tscn" id="2_h2yge"]
[ext_resource type="AudioStream" uid="uid://c1yyaxqvq4jah" path="res://Resources/Music/TUUDUM.ogg" id="5_lquwl"]
[ext_resource type="Script" uid="uid://qwkd6a45f8nm" path="res://background_music.gd" id="6_7mycd"]
[ext_resource type="Script" uid="uid://b4s4y5xs36tof" path="res://character.gd" id="7_272bh"]

[node name="Main" type="Node"]

[node name="Navigator" parent="." instance=ExtResource("1_0xm2m")]

[node name="EncounterContainer" type="Node2D" parent="."]
position = Vector2(504.00006, 599)
scale = Vector2(0.55999875, 0.55999875)
script = ExtResource("2_272bh")

[node name="Timer" type="Timer" parent="EncounterContainer"]
one_shot = true

[node name="HandModel" parent="." instance=ExtResource("2_1bvp3")]
position = Vector2(776, 816)
scale = Vector2(0.5, 0.5)

[node name="Node2D" parent="." instance=ExtResource("2_h2yge")]
offset_left = -4.0
offset_top = 440.0
offset_right = -4.0
offset_bottom = 440.0
scale = Vector2(0.9, 0.9)

[node name="Background Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_lquwl")
volume_db = -20.0
autoplay = true
parameters/looping = true
script = ExtResource("6_7mycd")

[node name="Character" type="Node" parent="."]
script = ExtResource("7_272bh")

[connection signal="start_encounter" from="Navigator" to="EncounterContainer" method="_on_navigator_start_encounter"]
[connection signal="start_encounter" from="Navigator" to="Node2D" method="_on_navigator_start_encounter"]
[connection signal="boss_music" from="EncounterContainer" to="Background Music" method="_on_encounter_container_boss_music"]
[connection signal="enemy_attacked" from="EncounterContainer" to="Character" method="take_damage"]
[connection signal="enemy_died" from="EncounterContainer" to="Navigator" method="_on_encounter_container_enemy_died"]
[connection signal="enemy_turn_passed" from="EncounterContainer" to="Node2D" method="enable_spells"]
[connection signal="timeout" from="EncounterContainer/Timer" to="EncounterContainer" method="_on_timer_timeout"]
[connection signal="done_charging" from="HandModel" to="Node2D" method="_on_hand_model_done_charging"]
[connection signal="is_charging" from="HandModel" to="Node2D" method="_on_hand_model_is_charging"]
[connection signal="spell_button_clicked" from="Node2D" to="Character" method="_on_node_2d_spell_button_clicked"]
[connection signal="character_turn_passed" from="Character" to="EncounterContainer" method="take_turn"]
[connection signal="character_turn_passed" from="Character" to="Node2D" method="disable_spells"]
[connection signal="luck_changed" from="Character" to="Node2D" method="change_mana"]
[connection signal="spell_cast" from="Character" to="EncounterContainer" method="attack_enemy"]
[connection signal="spell_cast" from="Character" to="HandModel" method="animate"]
